# ctkDemo

./: CMakeLists.txt  README.md
App/: CMakeLists.txt  main.cpp
Plugins/: CMakeLists.txt
Plugins/cn.qtio.desktop/: CMakeLists.txt  MANIFEST.MF  desktopactivator.cpp  desktopactivator.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  resource.qrc
Plugins/cn.qtio.pluginadmin/: CMakeLists.txt  MANIFEST.MF  dialog.ui  pluginadminactivator.cpp  pluginadminactivator.h  pluginadmindialog.cpp  pluginadmindialog.h  pluginadminservice.cpp  pluginadminservice.h  pluginadminthread.cpp  pluginadminthread.h  resource.qrc
Plugins/cn.qtio.publisher/: CMakeLists.txt  MANIFEST.MF  publisheractivator.cpp  publisheractivator.h  resource.qrc
Plugins/cn.qtio.subscriber/: CMakeLists.txt  MANIFEST.MF  resource.qrc  subscriberactivator.cpp  subscriberactivator.h
Plugins/org.commontk.configadmin/: CMakeLists.txt  MANIFEST.MF  ctkCMEventDispatcher.cpp  resource.qrc
Plugins/org.commontk.eventadmin/: CMakeLists.txt  MANIFEST.MF  ctkEventAdminService.cpp  resource.qrc
Plugins/org.commontk.eventadmin/adapter/: ctkEAFrameworkEventAdapter.cpp
Plugins/org.commontk.eventadmin/dispatch/: ctkEAInterruptibleThread.cpp
Plugins/org.commontk.eventadmin/handler/: ctkEACacheTopicHandlerFilters.tpp
Plugins/org.commontk.eventadmin/tasks/: ctkEAHandlerTask.tpp  ctkEASyncThread.cpp
Plugins/org.commontk.eventadmin/util/: ctkEACyclicBarrier.cpp
Plugins/org.commontk.eventadmin/utils/: ctkEABrokenBarrierException.cpp  ctkEABrokenBarrierException_p.h  ctkEACacheMap_p.h  ctkEACyclicBarrier_p.h  ctkEALeastRecentlyUsedCacheMap.tpp  ctkEALeastRecentlyUsedCacheMap_p.h  ctkEATimeoutException.cpp  ctkEATimeoutException_p.h
Plugins/org.commontk.log/: CMakeLists.txt  MANIFEST.MF  ctkLogQDebug.cpp  resource.qrc
Plugins/org.commontk.metatype/: CMakeLists.txt  MANIFEST.MF  ctkAttributeDefinitionImpl.cpp  ctkMTLocalizationElement.cpp  resource.qrc
ctk/: CMakeLists.txt
ctk/ctkCore/: CMakeLists.txt
ctk/ctkCore/include/: ctkCoreExport.h
ctk/ctkPluginFramework/: CMakeLists.txt
ctk/ctkPluginFramework/include/: ctkConfig.h  ctkPluginFrameworkExport.h
ctk/ctkPluginFramework/service/application/: ctkApplicationDescriptor.cpp  ctkApplicationHandle.cpp
ctk/ctkPluginFramework/service/pluginadmin/: pluginAdmin.h
doc/: framework.md  introduce.md  pluginmetadata.md
