project(Plugins VERSION 0.1 LANGUAGES CXX)


add_subdirectory(org.commontk.eventadmin)
add_subdirectory(org.commontk.configadmin)
add_subdirectory(org.commontk.log)
add_subdirectory(org.commontk.metatype)
add_subdirectory(cn.qtio.subscriber)
add_subdirectory(cn.qtio.publisher)
add_subdirectory(cn.qtio.pluginadmin)
add_subdirectory(cn.qtio.desktop)